2009-05-02  kitone  <kitone@gna.org>

	* plugins/actions/movesubtitles/dialog-move-subtitles.glade:
	* plugins/actions/movesubtitles/movesubtitles.cc:
	Improvement of "Move Subtitles" with the option "Only selected subtitles".
	Fix Gtk warning: adjustment with non-zero page size is deprecated.

2009-05-02  kitone  <kitone@gna.org>

	* plugins/subtitleformats/advancedsubstationalpha/advancedsubstationalpha.cc:
	* plugins/subtitleformats/mpsub/mpsub.cc:
	* plugins/subtitleformats/substationalpha/substationalpha.cc:
	Fix: Debian bug #526155: FTBFS with GCC 4.4: missing #include.

2009-04-28  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	* src/vp/gstreamerplayer.cc:
	Fix: bug #7019. The black rectangle.

2009-04-26  kitone  <kitone@gna.org>

	* configure.in:
	Change dependence of libxml++ >= 2.20. 
	Fix: bug #13428.

2009-04-26  kitone  <kitone@gna.org>

	* configure.in:
	* src/isocodes.cc:
	Fix: ISO_CODES* test.
	Fix: bug #13428.

2009-04-22  kitone  <kitone@gna.org>

	* COPYING:
	Update with GPLv3.

2009-04-22  kitone  <kitone@gna.org>

	* plugins/actions/about/about.cc:
	* plugins/actions/adjusttime/adjusttime.cc:
	* plugins/actions/applytranslation/applytranslation.cc:
	* plugins/actions/changeframerate/changeframerate.cc:
	* plugins/actions/combinesubtitles/combinesubtitles.cc:
	* plugins/actions/command/command.cc:
	* plugins/actions/configurekeyboardshortcuts/configurekeyboardshortcuts.cc:
	* plugins/actions/dialoguize/dialoguize.cc:
	* plugins/actions/documentmanagement/documentmanagement.cc:
	* plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:
	* plugins/actions/editcell/editcell.cc:
	* plugins/actions/errorchecking/errorchecking.h:
	* plugins/actions/errorchecking/errorcheckingplugin.cc:
	* plugins/actions/errorchecking/errorcheckingpreferences.h:
	* plugins/actions/errorchecking/maxcharactersperline.h:
	* plugins/actions/errorchecking/maxlinepersubtitle.h: